# ISC_bma400

./: CMakeLists.txt  CMakePresets.json  README.md  prj.conf
BMA400-API/: bma400.c  bma400.h  bma400_defs.h
BMA400-API/examples/: basic.c  fifo.c  step_counter.c
boards/arm/pet_tracker/: Kconfig.board  Kconfig.defconfig  pet_tracker.dts  pet_tracker_defconfig  pet_tracker_pinctrl.dtsi
child_image/: mcuboot.overlay
src/: app.overlay  main.c  my_lbs.c  my_lbs.h
